# document-intelligence-refinery

./: .gitignore  DOMAIN_NOTES.md  Dockerfile  README.md  main.py  pyproject.toml
rubric/: extraction_rules.yaml
scripts/: generate_final_artifacts.py  generate_profiles.py  ingest_document.py  run_extraction.py  run_query.py  run_triage.py  search_documents.py
src/: __init__.py
src/agents/: __init__.py  chunker.py  extractor.py  indexer.py  query_agent.py  triage.py
src/models/: __init__.py  document_profile.py  extracted_document.py  ldu.py  page_index.py  provenance.py
src/strategies/: __init__.py  base.py  fast_text.py  layout_extractor.py  vision_extractor.py
src/tools/: __init__.py  query_tools.py
src/utils/: __init__.py  budget_guard.py  confidence.py  hashing.py  pdf_utils.py
tests/: __init__.py  test_chunker_indexer_query.py  test_triage_and_extraction.py
