[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-intelligence-refinery"
version = "0.1.0"
description = "Agentic Pipeline for Unstructured Document Extraction at Enterprise Scale"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "TRP1 FDE Program"}
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "PyMuPDF>=1.24.0",
    "pdfplumber>=0.11.0",
    "PyYAML>=6.0",
    "openai>=1.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
]
google = [
    "google-generativeai>=0.5.0",
]
rag = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0",
    "langchain>=0.2.0",
    "langgraph>=0.1.0",
]
all = [
    "document-intelligence-refinery[dev,google,rag]",
]

[project.scripts]
refinery = "main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
